--- a/OpenCL-HUBERT/OpenCL-HUBERT.vcxproj.filters
+++ b/OpenCL-HUBERT/OpenCL-HUBERT.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="matrix_mult_transpose.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="tensor_matMul.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="tensors.cpp">
