--- a/OpenCL-HUBERT/OpenCL-HUBERT.vcxproj.filters
+++ b/OpenCL-HUBERT/OpenCL-HUBERT.vcxproj.filters
@@ -54,9 +54,6 @@
     <ClInclude Include="constant_headers\qa_x_softmax.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="constant_headers\softmax_layer0.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="constant_headers\softmax_layer0_out.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -64,6 +61,54 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="constant_headers\softmax_b4_int_exp.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="constant_headers\softmax_b4_max.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="constant_headers\softmax_x_int_max.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="constant_headers\softmax_layer0.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="constant_headers\softmax_b4_act.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="constant_headers\softmax_int_exp_IP.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="constant_headers\softmax_int_poly.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="constant_headers\softmax_int_poly_z.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="constant_headers\softmax_ip_floor.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="constant_headers\softmax_ip_q.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="constant_headers\softmax_ip_2q.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="constant_headers\softmax_ip_exp1.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="constant_headers\softmax_after_act.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="constant_headers\qa_fpm.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="constant_headers\fpm_round.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="constant_headers\fpm_pidentity.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="constant_headers\fpm_AdB.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -81,6 +126,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="BERT_testbench.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="constant_headers\softmax_layer0.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
