--- a/OpenCL-HUBERT/OpenCL-HUBERT.vcxproj
+++ b/OpenCL-HUBERT/OpenCL-HUBERT.vcxproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -130,6 +130,13 @@
     <ClInclude Include="constant_headers\fpm_AdB.h" />
     <ClInclude Include="constant_headers\fpm_pidentity.h" />
     <ClInclude Include="constant_headers\fpm_round.h" />
+    <ClInclude Include="constant_headers\gelu_b_int.h" />
+    <ClInclude Include="constant_headers\gelu_c_int.h" />
+    <ClInclude Include="constant_headers\gelu_neg_b_int.h" />
+    <ClInclude Include="constant_headers\gelu_pre_fte.h" />
+    <ClInclude Include="constant_headers\gelu_result_int.h" />
+    <ClInclude Include="constant_headers\gelu_shift_int.h" />
+    <ClInclude Include="constant_headers\gelu_x_int.h" />
     <ClInclude Include="constant_headers\qa_fpm.h" />
     <ClInclude Include="constant_headers\qa_pasf_softmax.h" />
     <ClInclude Include="constant_headers\qa_x_softmax.h" />
@@ -151,20 +158,18 @@
     <ClInclude Include="constant_headers\softmax_layer0_out.h" />
     <ClInclude Include="constant_headers\softmax_sf_layer0.h" />
     <ClInclude Include="constant_headers\softmax_x_int_max.h" />
+    <ClInclude Include="gelu.h" />
     <ClInclude Include="hubertEnums.h" />
     <ClInclude Include="matrix_mult.h" />
     <ClInclude Include="matrix_mult_transpose.h" />
-    <ClInclude Include="quantact.h" />
-    <ClInclude Include="softmax.h" />
     <ClInclude Include="tensor3d.h" />
     <ClInclude Include="tensors.h" />
     <ClInclude Include="tensor_matMul.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="BERT_testbench.cpp" />
     <ClCompile Include="constant_headers\softmax_layer0.cpp" />
-    <ClCompile Include="quantact.cpp" />
-    <ClCompile Include="softmax.cpp" />
+    <ClCompile Include="gelu.cpp" />
+    <ClCompile Include="gelu_testbench.cpp" />
     <ClCompile Include="tensor3d.cpp" />
     <ClCompile Include="tensors.cpp" />
   </ItemGroup>
