--- a/OpenCL-HUBERT/OpenCL-HUBERT.vcxproj.filters
+++ b/OpenCL-HUBERT/OpenCL-HUBERT.vcxproj.filters
@@ -69,6 +69,21 @@
     <ClInclude Include="constant_headers\softmax_b_int.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="constant_headers\softmax_n_m_q.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="constant_headers\softmax_exp2.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="constant_headers\softmax_exp_int.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="constant_headers\softmax_poly.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="constant_headers\softmax_return.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="tensors.cpp">
