--- a/OpenCL-HUBERT/OpenCL-HUBERT.vcxproj.filters
+++ b/OpenCL-HUBERT/OpenCL-HUBERT.vcxproj.filters
@@ -81,18 +81,21 @@
     <ClInclude Include="constant_headers\softmax_return.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="constant_headers\gelu_x_int.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="tensors.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="tensor3d.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="gelu.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="gelu_testbench.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="tensor3d.hpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="tensors.hpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
